200 OK http://sitl.diputados.gob.mx/LXIII_leg/curricula.php?dipt=769

--- a/sitl.diputados.gob.mx/2dac73ed4e8e4221f3195a85f687a07d899307d6.html
+++ b/sitl.diputados.gob.mx/2dac73ed4e8e4221f3195a85f687a07d899307d6.html
@@ -71,7 +71,7 @@
 
 <tr>
 <td width="130" height="20"><font size="1" face="Arial, Helvetica, sans-serif">Correo electrónico:</font></td>
-<td width="470"><strong><font size="1" face="Arial, Helvetica, sans-serif"> </font></strong></td>
+<td width="470"><strong><font size="1" face="Arial, Helvetica, sans-serif">fabiola.rosas@congreso.gob.mx </font></strong></td>
 </tr>
 
 <tr>
@@ -136,7 +136,101 @@
 
  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde"><tr>	<td colspan="5" width="361" height="10" valign="top"><img src="images/h_line.gif" width="749" height="1" vspace="10"></td></tr></TD></TR>
 
-			    
+			     
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">ESCOLARIDAD</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">Maestría</td>
+			        <td width="300" class="textoNegro">Pedagogía</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Licenciatura</td>
+			        <td width="300" class="textoNegro">Biología</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">TRAYECTORIA POLÍTICA</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">Secretaria de Gestión Social del Movimiento Territorial Tlaxcala</td>
+			        <td width="300" class="textoNegro">PRI</td>
+			        <td width="160" class="textoNegro">1987-1990</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Consejero Político Estatal</td>
+			        <td width="300" class="textoNegro">PRI</td>
+			        <td width="160" class="textoNegro">2000-2002</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Secretaria de organización en Comité Estatal del O.N.M.P.R.I. Tlaxcala</td>
+			        <td width="300" class="textoNegro">PRI</td>
+			        <td width="160" class="textoNegro">2013 a la fecha</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Delegada Especial del O.N.M.P.R.I.en campaña del distrito III Tlaxcala</td>
+			        <td width="300" class="textoNegro">PRI</td>
+			        <td width="160" class="textoNegro">2014</td>
+                              </tr>
+ 
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">ADMINISTRACIÓN PÚBLICA LOCAL</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">Directora de Ecología</td>
+			        <td width="300" class="textoNegro">H. Ayuntamiento de Chiautempan, Tlaxcala</td>
+			        <td width="160" class="textoNegro">1985-1989</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro"></td>
+			        <td width="300" class="textoNegro">Programa Elemental de Asistencia Técnica (PEAT)</td>
+			        <td width="160" class="textoNegro">1990-1992</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Responsable del Laboratorio de Organismos Benéficos</td>
+			        <td width="300" class="textoNegro">Universidad Autónoma de Tlaxcala</td>
+			        <td width="160" class="textoNegro">1992-1995</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Responsable de Proyecto de Plagas Agrícolas</td>
+			        <td width="300" class="textoNegro">Cómite Estatal de Sanidad Vegetal (SAGARPA)</td>
+			        <td width="160" class="textoNegro">1996-1997</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Técnico en Asistencia Agrícola</td>
+			        <td width="300" class="textoNegro">Instituto Nacional para el Desarrollo de Capacidades del Sector Rural, A.C. (INCA Rural)</td>
+			        <td width="160" class="textoNegro">1998-2000</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Presidenta Honorifica del Sistema de Desarrollo Integral de la Familia (DIF)</td>
+			        <td width="300" class="textoNegro">H. Ayuntamiento de Chiautempan, Tlaxcala</td>
+			        <td width="160" class="textoNegro">2011-2013</td>
+                              </tr>
+ 
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">ASOCIACIONES A LAS QUE PERTENECE</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">Secretaria Técnica</td>
+			        <td width="300" class="textoNegro">Fundación Produce Tlaxcala</td>
+			        <td width="160" class="textoNegro">1994-1996</td>
+                              </tr>
+ 
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">ACTIVIDADES DOCENTES</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">Docente</td>
+			        <td width="300" class="textoNegro">Asignatura: Educación Basica (Secundaria)</td>
+			        <td width="160" class="textoNegro">2008-2016</td>
+                              </tr>
+
 
 
 <tr>	<td colspan="4" width="361" height="10" valign="top"><img src="images/h_line.gif" width="749" height="1" vspace="10"></td></tr>
