200 OK http://sitl.diputados.gob.mx/LXIII_leg/curricula.php?dipt=775

--- a/sitl.diputados.gob.mx/d900d0de95204ba57635a54e13fa0900586490ba.html
+++ b/sitl.diputados.gob.mx/d900d0de95204ba57635a54e13fa0900586490ba.html
@@ -144,7 +144,99 @@
 
  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde"><tr>	<td colspan="5" width="361" height="10" valign="top"><img src="images/h_line.gif" width="749" height="1" vspace="10"></td></tr></TD></TR>
 
-			    
+			     
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">ESCOLARIDAD</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">Licenciatura</td>
+			        <td width="300" class="textoNegro">Ingeniería Industrial</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Seminario</td>
+			        <td width="300" class="textoNegro">Marketing Político en Veracruz, Elecciones 2017</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Conferencia</td>
+			        <td width="300" class="textoNegro">Congreso de Ingeniería Industrial, Mecatrónica y Electromecánica</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Conferencia</td>
+			        <td width="300" class="textoNegro">Congreso regional de calidad. "Herramientas de cambio para la competitividad."</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Conferencia</td>
+			        <td width="300" class="textoNegro">5to. Congreso Nacional de Marketing Político, Ciudad de México</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Conferencia</td>
+			        <td width="300" class="textoNegro">Congreso de Ingeniería</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Curso</td>
+			        <td width="300" class="textoNegro">Técnicas de Administración y Organización de Trabajo</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">TRAYECTORIA POLÍTICA</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">coordinación Rescatista por Poza Rica en la campaña del Lic. Colaboración en la coordinación Rescatista por Poza Rica en la campaña del Lic. Miguel Ángel Yunes Linares y Dr. José Kirsch Sánchez</td>
+			        <td width="300" class="textoNegro"></td>
+			        <td width="160" class="textoNegro">junio 2016</td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Consejero Político Estatal</td>
+			        <td width="300" class="textoNegro">PRD</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Secretario del Comité Ejecutivo Municipal de Tihuatlán, Veracruz</td>
+			        <td width="300" class="textoNegro">PRD</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Coordinador de la campaña del C. Gregorio Gómez Martínez. Candidato a Presidente Municipal de Tihuatlán</td>
+			        <td width="300" class="textoNegro">PRD</td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      			      <tr>
+			        <td width="300" class="textoNegro">Coordinador de la campaña del ing. Leonardo Amador Rodríguez. Candidato a Diputado Federal, en la zona de Tihuatlán y Poza Rica.</td>
+			        <td width="300" class="textoNegro"></td>
+			        <td width="160" class="textoNegro"></td>
+                              </tr>
+ 
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">INICIATIVA PRIVADA</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">Subgerente</td>
+			        <td width="300" class="textoNegro">Cemex Concretos Poza Rica S.A. de C.V.</td>
+			        <td width="160" class="textoNegro">2009</td>
+                              </tr>
+ 
+			      		                  <TR><TD bgcolor="#FFFFFF" colspan=5 valign="bottom" align="left" class="TitulosVerde">ASOCIACIONES A LAS QUE PERTENECE</TD></TR>
+
+			      			      <tr>
+			        <td width="300" class="textoNegro">Miembro</td>
+			        <td width="300" class="textoNegro">CANACO Poza Rica</td>
+			        <td width="160" class="textoNegro">2015 a la fecha</td>
+                              </tr>
+
 
 
 <tr>	<td colspan="4" width="361" height="10" valign="top"><img src="images/h_line.gif" width="749" height="1" vspace="10"></td></tr>
