--- a/sitl.diputados.gob.mx/d900d0de95204ba57635a54e13fa0900586490ba.html
+++ b/sitl.diputados.gob.mx/d900d0de95204ba57635a54e13fa0900586490ba.html
@@ -71,7 +71,7 @@
 
 <tr>
 <td width="130" height="20"><font size="1" face="Arial, Helvetica, sans-serif">Correo electrónico:</font></td>
-<td width="470"><strong><font size="1" face="Arial, Helvetica, sans-serif"> </font></strong></td>
+<td width="470"><strong><font size="1" face="Arial, Helvetica, sans-serif">nicanor.martinez@congreso.gob.mx </font></strong></td>
 </tr>
 
 <tr>
