--- a/sitl.diputados.gob.mx/0149577a52f83c12167ecd37a08175f28dba2e27.html
+++ b/sitl.diputados.gob.mx/0149577a52f83c12167ecd37a08175f28dba2e27.html
@@ -128,7 +128,7 @@
 					   			            <a href="integrantes_de_comisionlxiii.php?comt=49" target="_self" class="linkNegroSin"> Recursos Hidráulicos (Secretaría) </a>&nbsp; | 
  			             
 
-					   			            <a href="integrantes_de_comisionlxiii.php?comt=54" target="_self" class="linkNegroSin"> Seguridad Pública  </a>&nbsp; | 
+					   			            <a href="integrantes_de_comisionlxiii.php?comt=54" target="_self" class="linkNegroSin"> Seguridad Pública (Secretaría) </a>&nbsp; | 
  			            <br>
 				       <span class="Estilo67">ESPECIAL</span> 
 
