--- a/sitl.diputados.gob.mx/4c5ce95bc2ad1bbdb29673ac7e1d899e45f2b80d.html
+++ b/sitl.diputados.gob.mx/4c5ce95bc2ad1bbdb29673ac7e1d899e45f2b80d.html
@@ -62,7 +62,7 @@
 <strong><font size="1" face="Arial, Helvetica, sans-serif">17 </font></strong>
 
 &nbsp;&nbsp;&nbsp;<b>|</b>&nbsp;&nbsp;<font size="1" face="Arial, Helvetica, sans-serif">Curul:</font>&nbsp;
-<strong><font size="1" face="Arial, Helvetica, sans-serif">I-300 </font></strong>
+<strong><font size="1" face="Arial, Helvetica, sans-serif">K-300 </font></strong>
 
 </td>
 </tr>
